test_scores/negative_dimers/features/Q4ADV7.pkl.xz
/g/alphafold/input_features/Homo_sapiens/features/Q4ADV7.pkl.xz